# SKI_combinator

./: .gitignore  dune-project
lib/: dune
